aot-next-front/styles/Home.module.scss
@import './variables.scss';
@import './keyframes.scss';

.header{
  width: 100%;
  height: $headerHeight;
  position: fixed;
  top: 0;
  @include flexRowCenterBetween;
  background-color: white;
  box-shadow: $LBLowShadow;
  z-index: 10;

  .title{
    position: relative;
    @include flexColumnCenter;
    margin: 0;
    margin-left: 10%;
    color: $colour3;

    span{
      font-family: $cursiveFont;
      font-size: 1.25em;
      margin-bottom: -20px;
    }
  }

  .contactBar{
    display: none;
    position: absolute;
    height: 1.75em;
    padding-left: .5em;
    justify-content: space-evenly;
    align-items: center;
    list-style: none;
    right: 0;
    top: 0;
    background-color: $colour1;
    color: white;
    border-bottom-left-radius: 8px;
    // font-size: 12px;

    li {
      margin: 0 .5em
    }
  }

  .nav{
    display: none;
  }

  .mobileNav{
    width: 100vw;
    height: 100vh;
    top: 100px;
    position: fixed;
    color: $colour2;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%232F4858' width='11' height='11'/%3E%3Crect fill='%232f4858' x='10' width='11' height='11'/%3E%3Crect fill='%232f4858' y='10' width='11' height='11'/%3E%3Crect fill='%232f4757' x='20' width='11' height='11'/%3E%3Crect fill='%232f4757' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%232e4757' y='20' width='11' height='11'/%3E%3Crect fill='%232e4757' x='30' width='11' height='11'/%3E%3Crect fill='%232e4757' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%232e4756' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%232e4656' y='30' width='11' height='11'/%3E%3Crect fill='%232e4656' x='40' width='11' height='11'/%3E%3Crect fill='%232e4656' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%232e4656' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%232d4655' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%232d4655' y='40' width='11' height='11'/%3E%3Crect fill='%232d4555' x='50' width='11' height='11'/%3E%3Crect fill='%232d4555' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%232d4555' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%232d4554' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%232d4554' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%232d4554' y='50' width='11' height='11'/%3E%3Crect fill='%232c4454' x='60' width='11' height='11'/%3E%3Crect fill='%232c4453' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%232c4453' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%232c4453' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%232c4453' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%232c4453' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%232c4352' x='70' width='11' height='11'/%3E%3Crect fill='%232c4352' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%232c4352' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%232b4352' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%232b4352' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%232b4351' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%232b4251' x='80' width='11' height='11'/%3E%3Crect fill='%232b4251' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%232b4251' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%232b4251' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%232b4250' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%232a4250' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%232a4150' x='90' width='11' height='11'/%3E%3Crect fill='%232a4150' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%232a4150' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%232a414f' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%232a414f' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%232a414f' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%232a404f' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%232a404f' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%2329404e' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%2329404e' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%2329404e' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%2329404e' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23293f4e' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23293f4d' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23293f4d' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23293f4d' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%23283f4d' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%23283f4d' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23283e4c' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23283e4c' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23283E4C' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
    // background-attachment: fixed;
    background-size: cover;
    z-index: 10;

    ul {
      font-size: 28px;
      width: auto;
      margin: 10%;
      @include flexColumn;
      list-style: none;

      li{
        min-height: 75px;
        line-height: 1.1em;

        &:hover{
          color: $colour5;

          li{
            color: $colour2
          }
        }
      }

      .subMenu{
        overflow: hidden;

        ul{
          height: auto;
          min-height: 250px;
          margin: 0;
          margin-left: .5em;
          font-size: 21px;
          padding: 16px 0;
  
          li{
            @include flexColumn;
            justify-content: center;
            min-height: 45px;

            :hover{
              color: $colour5;
            }
          }
        }
      }
      
    }

    .icon{
      margin-left: 1em;
    }
  }
}
/* ... */

